updated cors configuration